--- a/src/app/movements/movements.component.html
+++ b/src/app/movements/movements.component.html
@@ -13,38 +13,17 @@
                         <div class="content table-responsive table-full-width"> 
                         <table id="myTable" class="table table-hover table-striped">
                                 <thead>
-                                    <tr>
-                                        <th>ID</th>
-                                        <th>Nombre</th>
-                                        <th>Fecha de Creacion</th>
-                                        <th>Estatus</th>
-                                        <th>Kanban</th>                                
-                                        <th>Ver</th>                                
-                                        <th>Editar</th>                                
-                                        <th>Eliminar</th>                                
-                                        <th>Análisis</th>                                
-                                        <th>Bugs</th>                                
-                                        <th>Compartir</th>                                
-                                        <th>Valor</th>                                
+                                    <tr id="forFilters">
+                                        <th>Tipo</th>                           
+                                        <th>Descripcion</th>
+                                        <th>Fecha</th>                           
                                     </tr>
                                 </thead>
-                            <tbody>
-                                <tr *ngFor="let row of proyectos; let i = index">
-                                    <td>{{i+1}}</td>
-                                    <td>{{row.title}}</td>
+                            <tbody *ngIf="movimentes!=undefined">
+                                <tr *ngFor="let row of movimentes; let i = index">
+                                    <td>{{row.type}}</td>
+                                    <td>{{row.description}}</td>
                                     <td style="text-align:center">{{row.fechaModificacion | date:'mediumDate'}}</td>
-                                    <td style="text-align:center">{{row.status}}</td>
-                                    <td style="text-align:center"><button class="btn btn-simple btn-icon" (click)="verKanban(row.id)"><i class="fa fa-check-square-o"></i></button></td>
-                                    <td style="text-align:center"><button class="btn btn-simple btn-icon" (click)="verDetalle(row.id)"><i class="fa fa-eye"></i></button></td>
-                                    <td style="text-align:center"><button class="btn btn-simple btn-icon" data-toggle="modal" data-dismiss="modal" data-target="#newProyecto" (click)="editar(row.id)" ><i class="fa fa-edit"></i></button></td>
-                                    <td style="text-align:center"><button class="btn btn-simple btn-icon" data-toggle="modal" data-dismiss="modal" data-target="#deleteProyecto"><i class="fa fa-trash-o"></i></button> </td>
-                                    <td style="text-align:center"><button *ngIf="row.sonar" class="btn btn-simple btn-icon" (click)="verGraficas(row.id)"><i class="fa fa-line-chart"></i></button><button *ngIf="!row.sonar" class="btn btn-simple btn-icon" (click)="addSonar(row.id)"><i class="fa fa-search-plus"></i></button></td>
-                                    <td style="text-align:center"><button *ngIf="row.sonar" class="btn btn-simple btn-icon" (click)="verIssues(row.id)"><i class="fa fa-bug"></i></button><button *ngIf="!row.sonar" class="btn btn-simple btn-icon" disabled><i class="fa fa-bug"></i></button></td>
-                                    <td style="text-align:center"><button class="btn btn-simple btn-icon" (click)="newPerson(row.users,row.id)" data-toggle="modal" data-target="#newPerson"><i class="fa fa-share"></i></button></td>
-                                    <td style="text-align:center">
-                                        <button *ngIf="row.price==undefined" class="btn btn-simple btn-icon" (click)="assessment(row.id)"><i class="fa fa-usd"></i> Valorar</button>
-                                        <span *ngIf="row.price!=undefined">${{row.price}} YP</span>
-                                    </td>
                                 </tr>
                             </tbody>
                         </table>
